# muffin-oauth

./: .bumpversion.cfg  .coveragerc  .git-commits.yaml  .pre-commit-config.yaml  CONTRIBUTING.rst  Changelog  MANIFEST.in  Makefile  README.md  README.rst  example.py  muffin_oauth.py  pyproject.toml  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  tests.py
.github/workflows/: release.yml  tests.yml
example/: app.py  config.py
muffin_oauth/: __init__.py  plugin.py
requirements/: requirements.txt
