[bumpversion]
commit = True
current_version = 0.5.4
files = muffin_oauth.py
message = build(version): {current_version} -> {new_version}
tag = True
tag_name = {new_version}

[wheel]
python-tag = py3

[metadata]
name = muffin-oauth
version = attr: muffin_oauth.__version__
url = https://github.com/klen/muffin-oauth
description = Support OAuth authentication for Muffin Framework.
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = asyncio, trio, asgi, muffin, oauth, authorization
project_urls = 
	Documentation = https://github.com/klen/muffin-oauth
	Source code = https://github.com/klen/muffin-oauth
	Issue tracker = https://github.com/klen/muffin-oauth/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
py_modules = muffin_oauth

[pylama]
ignore = D211,D213

[pylama:setup.py]
ignore = D

[pylama:tests.py]
ignore = D

[tool:pytest]
addopts = -sxv
