[bumpversion]
commit = True
current_version = 0.6.0
files = muffin_oauth.py
message = build(version): {current_version} -> {new_version}
tag = True
tag_name = {new_version}

[wheel]
python-tag = py3

[metadata]
name = muffin-oauth
version = attr: muffin_oauth.__version__
url = https://github.com/klen/muffin-oauth
description = Support OAuth authentication for Muffin Framework.
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = asyncio, trio, asgi, muffin, oauth, authorization
project_urls = 
	Documentation = https://github.com/klen/muffin-oauth
	Source code = https://github.com/klen/muffin-oauth
	Issue tracker = https://github.com/klen/muffin-oauth/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: AsyncIO
	Framework :: Trio

[options]
py_modules = muffin_oauth
python_requires = >= 3.7
zip_safe = False
install_requires = 
    muffin          >= 0.41.10
    aioauth-client  >= 0.25.4
    muffin_session  >= 0.7.5

[options.extras_require]
tests = 
    anyio
    trio
    pytest

build =
    bump2version
    twine
    wheel

example =
    uvicorn

[pylama]
ignore = D211,D213

[pylama:setup.py]
ignore = D

[pylama:tests.py]
ignore = D

[tool:pytest]
addopts = -sxv
